samples/_failures_safe/1761327587_dac926_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8a2f425b.c: In function ‘main’:
./samples/SAFE/__tmp_8a2f425b.c:157:21: error: expected declaration or statement at end of input
  157 |                     print_matrix(&result, "A * B");
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_8a2f425b.c:157:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8a2f425b.c:157:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8a2f425b.c:157:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8a2f425b.c:157:21: error: expected declaration or statement at end of input
